<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_apply_for_internship"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_article_24"
        android:title="@string/apply_now"/>

    <item
        android:id="@+id/nav_completioncerti"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_card_membership_24"
        android:title="@string/certificate"/>

    <item
        android:id="@+id/nav_company_details"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_domain_24"
        android:title="@string/companies"/>
    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"/>
</menu>