<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
style="@style/Widget.Material3.CardView.Elevated"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginHorizontal="10sp"
android:layout_marginTop="5sp"
android:layout_marginBottom="5sp"
app:cardCornerRadius="20sp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="84sp"
        android:layout_height="84sp"
        android:src="@drawable/ic_baseline_domain_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cAoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_of_interest" />

        <TextView
            android:id="@+id/cAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_address" />

        <TextView
            android:id="@+id/cMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_no" />

    </LinearLayout>

</LinearLayout>

</com.google.android.material.card.MaterialCardView>