<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        app:cardCornerRadius="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="84sp"
                android:layout_height="84sp"
                android:src="@drawable/ic_baseline_person_24" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp" />

                <TextView
                    android:layout_below="@id/lName"
                    android:id="@+id/lEnno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enrollment_no" />

                <TextView
                    android:layout_below="@id/lEnno"
                    android:id="@+id/lDept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department" />

                <com.google.android.material.button.MaterialButton
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="deletUser"
                    android:text="@string/delete_user" />

            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>